--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,6 @@
 ---
-const currPath: string = Astro.url.pathname.replace(/\/+$/, "");
+const currPath: string =
+  Astro.url.pathname === "/" ? Astro.url.pathname : Astro.url.pathname.replace(/\/+$/, "");
 
 import "../styles/global.css";
 ---
