--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -17,16 +17,16 @@ interface OpenSource {
 
 const projects: Projects[] = [
   {
+    name: "Block URL",
+    url: "https://github.com/alexwkleung/block-url-extension",
+    stack: ["React", "TypeScript", "Tailwind", "MUI"],
+    timeframe: "2025",
+  },
+  {
     name: "Iris",
     url: "https://github.com/alexwkleung/Iris",
     stack: ["TypeScript", "Rust", "Electron"],
     timeframe: "2022 - 2024",
-  },
-  {
-    name: "Block URL",
-    url: "https://github.com/alexwkleung/block-url-extension",
-    stack: ["React", "TypeScript"],
-    timeframe: "2025",
   },
   {
     name: "TermStylist",
@@ -49,7 +49,12 @@ const openSource: OpenSource[] = [
 <DefaultLayout>
   <div slot="page-heading">PROJECTS</div>
   <div slot="page-content">
-    <p class="projects-paragraph">A list of personal projects.</p>
+    <p class="projects-paragraph text">My personal projects.</p>
+    <p class="projects-paragraph text">
+      You can support my work on <a href="https://github.com/sponsors/alexwkleung/" target="_blank"
+        >GitHub Sponsors</a
+      > or <a href="https://ko-fi.com/alexwkleung" target="_blank">Ko-Fi</a>.
+    </p>
     {
       projects.map((project) => (
         <p class="projects-paragraph">
@@ -64,7 +69,7 @@ const openSource: OpenSource[] = [
     <div class="open-source-heading text">
       <div>OPEN SOURCE</div>
     </div>
-    <p class="projects-paragraph">A list of open-source contributions.</p>
+    <p class="projects-paragraph text">My open-source contributions.</p>
     {
       openSource.map((org) => (
         <p class="projects-paragraph">
