--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,10 @@ import DefaultLayout from "../layouts/DefaultLayout.astro";
   <div slot="page-heading">HI 你好, I'M ALEX!</div>
   <div slot="page-content">
     <p class="about-pronouns">[<i> he / him </i>]</p>
-    <p class="about-paragraph">I'm a software developer that does open-source as a side hobby.</p>
+    <p class="about-paragraph">
+      I'm a software developer with a focus on front-end and full-stack. I also do open-source as a
+      side hobby.
+    </p>
     <p class="about-paragraph">
       I enjoy programming in TypeScript, development tools, writing, and interested in
       human-computer interaction.
