--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,10 @@ import DefaultLayout from "../layouts/DefaultLayout.astro";
       side hobby.
     </p>
     <p class="about-paragraph">
+      Currently, I'm diving deeper into internal tools/products and wanting to make a lasting impact
+      with the work I do.
+    </p>
+    <p class="about-paragraph">
       I enjoy programming in TypeScript, development tools, writing, and interested in
       human-computer interaction.
     </p>
