--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -49,7 +49,12 @@ const openSource: OpenSource[] = [
 <DefaultLayout>
   <div slot="page-heading">PROJECTS</div>
   <div slot="page-content">
-    <p class="projects-paragraph text">My personal projects.</p>
+    <p class="projects-paragraph text">
+      My personal projects. All public projects can be found on my <a
+        href="https://github.com/alexwkleung"
+        target="_blank">GitHub</a
+      >.
+    </p>
     <p class="projects-paragraph text">
       You can support my work on <a href="https://github.com/sponsors/alexwkleung/" target="_blank"
         >GitHub Sponsors</a
