--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ import "../styles/global.css";
   <a href="https://github.com/alexwkleung" class="footer-icon" target="_blank"
     ><Icon name="mdi:github" class="github-icon" /></a
   >
-  <a href="https://www.linkedin.com/in/alex-leung-a80bb7293/" class="footer-icon" target="_blank"
+  <a href="https://www.linkedin.com/in/alexwkleung/" class="footer-icon" target="_blank"
     ><Icon name="mdi:linkedin" class="linkedin-icon" /></a
   >
   <a href="mailto:alexleung25@outlook.com" class="footer-icon" target="_blank"
