Update linkedin url in contact page

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -11,9 +11,8 @@ import DefaultLayout from "../layouts/DefaultLayout.astro";
       > for any professional contact or opportunities.
     </p>
     <p class="contact-paragraph">
-      Feel free to connect on <a
-        href="https://www.linkedin.com/in/alex-leung-a80bb7293/"
-        target="_blank">LinkedIn</a
+      Feel free to connect on <a href="https://www.linkedin.com/in/alexwkleung/" target="_blank"
+        >LinkedIn</a
       >.
     </p>
   </div>
