--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -38,7 +38,7 @@ const projects: Projects[] = [
 
 const openSource: OpenSource[] = [
   {
-    name: "Microsoft Visual Studio Code Documentation",
+    name: "Visual Studio Code Documentation",
     url: "https://github.com/microsoft/vscode-docs/pulls?q=is%3Apr+author%3Aalexwkleung+is%3Aclosed",
     stack: ["Markdown", "Git"],
     timeframe: "2023 - 2024",
