Add gradient card

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -17,6 +17,12 @@ interface OpenSource {
 
 const projects: Projects[] = [
   {
+    name: "Gradient Card",
+    url: "https://github.com/alexwkleung/gradient-card",
+    stack: ["React", "TypeScript", "Motion", "Tailwind"],
+    timeframe: "2025",
+  },
+  {
     name: "Block URL",
     url: "https://github.com/alexwkleung/block-url-extension",
     stack: ["React", "TypeScript", "Tailwind", "MUI"],
