--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,16 +7,7 @@ import DefaultLayout from "../layouts/DefaultLayout.astro";
   <div slot="page-content">
     <p class="about-pronouns">[<i> he / him </i>]</p>
     <p class="about-paragraph">
-      I'm a software developer with a focus on front-end and full-stack. I also do open-source as a
-      side hobby.
-    </p>
-    <p class="about-paragraph">
-      Currently, I'm diving deeper into internal tools/products and wanting to make a lasting impact
-      with the work I do.
-    </p>
-    <p class="about-paragraph">
-      I enjoy programming in TypeScript, development tools, writing, and interested in
-      human-computer interaction.
+      I'm a software developer with a focus on front-end and full-stack.
     </p>
   </div>
 </DefaultLayout>
