--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -56,7 +56,7 @@ const openSource: OpenSource[] = [
   <div slot="page-heading">PROJECTS</div>
   <div slot="page-content">
     <p class="projects-paragraph text">
-      My personal projects. All public projects can be found on my <a
+      All public projects can be found on my <a
         href="https://github.com/alexwkleung"
         target="_blank">GitHub</a
       >.
